--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-6">
     <img [src]="recipe.imagePath" class="img-responsive" alt="">
   </div>
 </div>
@@ -13,9 +13,9 @@
     <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" role="button">Manage recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a (click)="onAddToShoppingList()">To Shopping List</a></li>
+        <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
+        <li><a>Delete Recipe</a></li>
       </ul>
     </div>
 
@@ -28,6 +28,12 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <div class="list-group">
+      <div class="list-group-item"
+        *ngFor="let ingredient of recipe.ingredients"
+      >
+        {{ ingredient.name }} - {{ ingredient.ammount}}
+      </div>
+    </div>
   </div>
 </div>
