--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr/>
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-">
         <app-recipe-item
-                *ngFor="let recipeEl of recipes"
+                *ngFor="let recipeEl of recipes; let i=index"
                 [recipe]="recipeEl"
-                (recipeClicked)="onRecipeSelected(recipeEl)"
-        >
+                [index]="i"
 
+        >
         </app-recipe-item>
     </div>
 </div>
